--- a/lngi old.html
+++ b/lngi old.html
@@ -4,7 +4,7 @@
 <p><font face="arial" size="20" id="number"></font></p>
 <script>
 var t = 0;
-var speed = 1000;
+var speed = 10000000;
 var numberDisplay = 0;
 
 function ptFunction(num) {
