--- a/lngi_test.html
+++ b/lngi_test.html
@@ -5,8 +5,8 @@
 
 <script>
 var t = 0;
-var s = 0;
-var r = 0;
+var speed = 1,000,000;
+var numberDisplay= 0;
 function runthisthing() {
 	t++;
 	r = Math.floor((t**1.2/40)%360);
