--- a/lngi old.html
+++ b/lngi old.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <p><font face="arial" size="20" id="number"></font></p>
+<button onclick="speedDouble()"Speed x2"</button>
+<button onclick="speedHalf()"Speed /2"</button>
 <script>
 var t = 0;
 var speed = 10000000;
